// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextArea > should prioritize disabled over error styles 1`] = `
.circuit-0[disabled],
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

[disabled] .circuit-2,
.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-3 {
  position: relative;
}

.circuit-4 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal-disabled);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-4::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

<div
  class=" cui-field-disabled circuit-0"
>
  <label
    class="circuit-1"
    for=":ri:"
  >
    <span
      class="circuit-2"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-3"
  >
    <textarea
      aria-describedby=":rj:"
      aria-invalid="true"
      class="circuit-4"
      disabled=""
      id=":ri:"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should prioritize disabled over warning styles 1`] = `
.circuit-0[disabled],
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

[disabled] .circuit-2,
.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-3 {
  position: relative;
}

.circuit-4 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal-disabled);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-4::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

<div
  class=" cui-field-disabled circuit-0"
>
  <label
    class="circuit-1"
    for=":rk:"
  >
    <span
      class="circuit-2"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-3"
  >
    <textarea
      aria-describedby=":rl:"
      class="circuit-4"
      disabled=""
      id=":rk:"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render minRows props as rows when passed if rows is auto 1`] = `
.circuit-0[disabled],
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

[disabled] .circuit-2,
.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-3 {
  position: relative;
}

.circuit-4 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-4::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-4:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-4:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-4:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div
  class=" circuit-0"
>
  <label
    class="circuit-1"
    for=":rq:"
  >
    <span
      class="circuit-2"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-3"
  >
    <textarea
      aria-describedby=":rr:"
      class="circuit-4"
      id=":rq:"
      rows="3"
      style="resize: none; overflow-y: hidden; height: auto;"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render rows props when passed 1`] = `
.circuit-0[disabled],
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

[disabled] .circuit-2,
.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-3 {
  position: relative;
}

.circuit-4 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-4::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-4:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-4:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-4:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div
  class=" circuit-0"
>
  <label
    class="circuit-1"
    for=":rm:"
  >
    <span
      class="circuit-2"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-3"
  >
    <textarea
      aria-describedby=":rn:"
      class="circuit-4"
      id=":rm:"
      rows="3"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render with a Tooltip when passed the validationHint prop 1`] = `
.circuit-0[disabled],
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

[disabled] .circuit-2,
.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-3 {
  position: relative;
}

.circuit-4 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-4::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-4:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-4:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-4:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

.circuit-5 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  display: block;
  margin-top: 4px;
  color: var(--cui-fg-subtle);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

[disabled] .circuit-5,
.cui-field-disabled .circuit-5 {
  color: var(--cui-fg-subtle-disabled);
}

<div
  class=" circuit-0"
>
  <label
    class="circuit-1"
    for=":r6:"
  >
    <span
      class="circuit-2"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-3"
  >
    <textarea
      aria-describedby=":r7:"
      class="circuit-4"
      id=":r6:"
    />
  </div>
  <span
    class="circuit-5"
    id=":r7:"
  >
    Validation hint
  </span>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render with a prefix when passed the prefix prop 1`] = `
.circuit-0[disabled],
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

[disabled] .circuit-2,
.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-3 {
  position: relative;
}

.circuit-4 {
  position: absolute;
  pointer-events: none;
  color: var(--cui-fg-subtle);
  padding: 12px 16px;
  height: 48px;
  width: 48px;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  padding-left: 48px;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-5::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-5:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div
  class=" circuit-0"
>
  <label
    class="circuit-1"
    for=":r2:"
  >
    <span
      class="circuit-2"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-3"
  >
    <div
      class="circuit-4"
      style="width: 24px; height: 24px;"
    />
    <textarea
      aria-describedby=":r3:"
      class="circuit-5"
      id=":r2:"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render with a suffix when passed the suffix prop 1`] = `
.circuit-0[disabled],
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

[disabled] .circuit-2,
.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-3 {
  position: relative;
}

.circuit-4 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  padding-right: 48px;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-4::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-4:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-4:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-4:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

.circuit-5 {
  position: absolute;
  top: 0;
  right: 0;
  pointer-events: none;
  color: var(--cui-fg-subtle);
  padding: 12px 16px;
  height: 48px;
  width: 48px;
  -webkit-transition: right 120ms ease-in-out;
  transition: right 120ms ease-in-out;
}

<div
  class=" circuit-0"
>
  <label
    class="circuit-1"
    for=":r4:"
  >
    <span
      class="circuit-2"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-3"
  >
    <textarea
      aria-describedby=":r5:"
      class="circuit-4"
      id=":r4:"
    />
    <div
      class="circuit-5"
      style="width: 24px; height: 24px;"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render with default styles 1`] = `
.circuit-0[disabled],
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

[disabled] .circuit-2,
.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-3 {
  position: relative;
}

.circuit-4 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-4::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-4:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-4:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-4:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div
  class=" circuit-0"
>
  <label
    class="circuit-1"
    for=":r0:"
  >
    <span
      class="circuit-2"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-3"
  >
    <textarea
      aria-describedby=":r1:"
      class="circuit-4"
      id=":r0:"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render with disabled styled when passed the disabled prop 1`] = `
.circuit-0[disabled],
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

[disabled] .circuit-2,
.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-3 {
  position: relative;
}

.circuit-4 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal-disabled);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-4::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

<div
  class=" cui-field-disabled circuit-0"
>
  <label
    class="circuit-1"
    for=":rg:"
  >
    <span
      class="circuit-2"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-3"
  >
    <textarea
      aria-describedby=":rh:"
      class="circuit-4"
      disabled=""
      id=":rg:"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render with invalid styles when passed the invalid prop 1`] = `
.circuit-0[disabled],
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

[disabled] .circuit-2,
.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-3 {
  position: relative;
}

.circuit-4 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-danger);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-4::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:not(:focus)::-webkit-input-placeholder {
  color: var(--cui-fg-danger);
}

.circuit-4:not(:focus)::-moz-placeholder {
  color: var(--cui-fg-danger);
}

.circuit-4:not(:focus):-ms-input-placeholder {
  color: var(--cui-fg-danger);
}

.circuit-4:not(:focus)::placeholder {
  color: var(--cui-fg-danger);
}

.circuit-4:disabled,
.circuit-4[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-4:hover {
  box-shadow: 0 0 0 1px var(--cui-border-danger-hovered);
}

.circuit-4:focus {
  box-shadow: 0 0 0 2px var(--cui-border-danger);
}

.circuit-4:active {
  box-shadow: 0 0 0 1px var(--cui-border-danger-pressed);
}

<div
  class=" circuit-0"
>
  <label
    class="circuit-1"
    for=":ra:"
  >
    <span
      class="circuit-2"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-3"
  >
    <textarea
      aria-describedby=":rb:"
      aria-invalid="true"
      class="circuit-4"
      id=":ra:"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render with readonly styles when passed the readonly prop 1`] = `
.circuit-0[disabled],
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

[disabled] .circuit-2,
.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-3 {
  position: relative;
}

.circuit-4 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  background-color: var(--cui-bg-subtle-disabled);
  box-shadow: 0 0 0 1px var(--cui-border-normal);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-4::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-4:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-4:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-4:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div
  class=" circuit-0"
>
  <label
    class="circuit-1"
    for=":re:"
  >
    <span
      class="circuit-2"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-3"
  >
    <textarea
      aria-describedby=":rf:"
      class="circuit-4"
      id=":re:"
      readonly=""
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render with valid styles when passed the showValid prop 1`] = `
.circuit-0[disabled],
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

[disabled] .circuit-2,
.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-3 {
  position: relative;
}

.circuit-4 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-4::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-4:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-4:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-4:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div
  class=" circuit-0"
>
  <label
    class="circuit-1"
    for=":rc:"
  >
    <span
      class="circuit-2"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-3"
  >
    <textarea
      aria-describedby=":rd:"
      class="circuit-4"
      id=":rc:"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render with warning styles when passed the hasWarning prop 1`] = `
.circuit-0[disabled],
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

[disabled] .circuit-2,
.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-3 {
  position: relative;
}

.circuit-4 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-warning);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-4::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:not(:focus)::-webkit-input-placeholder {
  color: var(--cui-fg-warning);
}

.circuit-4:not(:focus)::-moz-placeholder {
  color: var(--cui-fg-warning);
}

.circuit-4:not(:focus):-ms-input-placeholder {
  color: var(--cui-fg-warning);
}

.circuit-4:not(:focus)::placeholder {
  color: var(--cui-fg-warning);
}

.circuit-4:disabled,
.circuit-4[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-4:hover {
  box-shadow: 0 0 0 1px var(--cui-border-warning-hovered);
}

.circuit-4:focus {
  box-shadow: 0 0 0 2px var(--cui-border-warning);
}

.circuit-4:active {
  box-shadow: 0 0 0 1px var(--cui-border-warning-pressed);
}

<div
  class=" circuit-0"
>
  <label
    class="circuit-1"
    for=":r8:"
  >
    <span
      class="circuit-2"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-3"
  >
    <textarea
      aria-describedby=":r9:"
      class="circuit-4"
      id=":r8:"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;

exports[`TextArea > should render without rows props when passed if rows is auto 1`] = `
.circuit-0[disabled],
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

[disabled] .circuit-2,
.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-3 {
  position: relative;
}

.circuit-4 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
  vertical-align: top;
  overflow: auto;
  resize: vertical;
}

.circuit-4::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-4:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-4:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-4:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div
  class=" circuit-0"
>
  <label
    class="circuit-1"
    for=":ro:"
  >
    <span
      class="circuit-2"
    >
      Textarea
    </span>
  </label>
  <div
    class="circuit-3"
  >
    <textarea
      aria-describedby=":rp:"
      class="circuit-4"
      id=":ro:"
      style="resize: none; overflow-y: hidden; height: auto;"
    />
  </div>
  <span
    aria-live="polite"
    role="status"
  />
</div>
`;
